Check out new upstream source file: - sys/kern/subr_prf.c
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5897 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -84,6 +84,7 @@ get-orig-source:
 		lib/libutil \
 		lib/libalias sys/netinet/libalias sys/modules/libalias \
 		lib/Makefile.inc \
+	         sys/kern/subr_prf.c \
 	         sys/kern/subr_sbuf.c \
 	         sys/sys/sbuf.h \
 		sys/netipx/ipx.h \
