Add -lutil-freebsd to lib/libutil/tests/Makefile LDFLAGS
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5900 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -87,3 +87,13 @@
  
  GENSRCS=	libelf_fsize.c libelf_msize.c libelf_convert.c
  CLEANFILES=	${GENSRCS}
+--- a/lib/libutil/tests/Makefile
++++ b/lib/libutil/tests/Makefile
+@@ -10,6 +10,6 @@
+ TAP_TESTS_C+=	trimdomain-nodomain_test
+ 
+ DPADD+=		${LIBUTIL}
+-LDADD+=		-lutil
++LDADD+=		-lutil-freebsd -lbsd
+ 
+ .include <bsd.test.mk>
