--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,11 @@ Uploaders:
 Build-Depends: debhelper (>= 7), pkg-config,
  bmake (>= 20131001-4~),
  m4,
- freebsd-mk (>= 10.0-5~),
+ freebsd-mk (>= 10.3~),
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
- kfreebsd-kernel-headers (>= 10.1~1) [kfreebsd-any],
+ kfreebsd-kernel-headers (>= 10.3~) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
