--- a/debian/rules
+++ b/debian/rules
@@ -57,7 +57,7 @@ PMAKE_COMMON = \
 	MAKEFLAGS=$(BSD_MAKEFLAGS) \
 	NO_WERROR=1 NOGCCERROR=1 \
         NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) \
-	SHLIB_MAJOR=0 WITH_TESTS=yes \
+	SHLIB_MAJOR=0 \
 	bmake \
 	$(NULL)
 PMAKE = \
