--- a/debian/control
+++ b/debian/control
@@ -175,6 +175,7 @@ Description: Development files for libusbhid
 
 Package: libusb3
 Architecture: kfreebsd-any
+Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD userspace USB programming library
  Library for programming USB applications without the knowledge
