--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Uploaders:
  Christoph Egger <christoph@debian.org>,
  Steven Chamberlain <steven@pyro.eu.org>,
 Build-Depends: debhelper (>= 9), pkg-config,
+ dpkg-dev (>= 1.16.1.1),
  bmake (>= 20131001-4~),
  m4,
  freebsd-mk (>= 10.3~),
