--- a/debian/rules
+++ b/debian/rules
@@ -25,16 +25,18 @@ version		:= $(shell echo $(full_version) | sed -e 's/[~+-].*//g')
 major		:= $(shell echo $(version) | sed -e 's/\..*//g')
 revision	:= $(shell echo $(full_version) | sed -e 's/^[^+-]*//g')
 
-CFLAGS = -Wall -g -pipe -fPIC -I. -I$(CURDIR)/sys -D_GNU_SOURCE \
-	-D__FreeBSD_version=__FreeBSD_kernel_version \
-	 -I/usr/include/freebsd \
-	 -Werror=implicit-function-declaration
+# Use hardening flags
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
+# Pre-define CFLAGS, for hardening, debug and optimisation level
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+
+CFLAGS += \
+	-Wall -pipe -fPIC -I. -I$(CURDIR)/sys -D_GNU_SOURCE \
+	-D__FreeBSD_version=__FreeBSD_kernel_version \
+	-I/usr/include/freebsd \
+	-Werror=implicit-function-declaration
 
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
