--- a/debian/rules
+++ b/debian/rules
@@ -2,14 +2,6 @@
 # -*- makefile -*-
 # Sample debian/rules that uses debhelper.
 
-DEB_HOST_MULTIARCH	?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-
-# Determine host architecture compiler
-DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-ifeq ($(origin CC),default)
-CC := $(DEB_HOST_GNU_TYPE)-gcc
-endif
-
 SHELL = bash
 
 # Uncomment this to turn on verbose mode.
@@ -24,6 +16,13 @@ svn_revision	:= $(shell echo $(full_version) | sed -e 's/.*~svn\([0-9]*\)-[0-9]*
 version		:= $(shell echo $(full_version) | sed -e 's/[~+-].*//g')
 major		:= $(shell echo $(version) | sed -e 's/\..*//g')
 revision	:= $(shell echo $(full_version) | sed -e 's/^[^+-]*//g')
+
+include /usr/share/dpkg/architecture.mk
+
+# Determine host architecture compiler
+ifeq ($(origin CC),default)
+CC := $(DEB_HOST_GNU_TYPE)-gcc
+endif
 
 # Use hardening flags
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
