Pre-define MACHINE_ARCH with the host architecture we are building for, otherwise freebsd-make naively assumes it is the same as the build architecture.  Fixes a cross-build issue reported by Helmut Grohne, thanks!
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6141 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,16 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
+MACHINE_ARCH		:= $(DEB_HOST_ARCH_CPU)
+
+ifeq ($(DEB_HOST_ARCH_CPU), arm)
+ifneq (,$(findstring armhf,$(DEB_HOST_ARCH)))
+MACHINE_ARCH		:= armv6hf
+else
+MACHINE_ARCH		:= armv6
+endif
+endif
+
 EXTRA_CFLAGS = \
 	-D__FreeBSD_version=__FreeBSD_kernel_version \
 	-D_GNU_SOURCE -pipe -Wall \
@@ -70,6 +80,7 @@ PMAKE_COMMON = \
 	SHLIB_MAJOR=0 \
 	bmake \
 	CC=$(CC) \
+        MACHINE_ARCH=$(MACHINE_ARCH) \
 	$(NULL)
 PMAKE = \
 	CFLAGS="$(CFLAGS)" \
