Fix libkiconv4 Description; it is not a udeb.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6146 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -294,7 +294,7 @@ Description: FreeBSD IPX address conversion support library (udeb)
 Package: libkiconv4
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: FreeBSD kernel side iconv library (udeb)
+Description: FreeBSD kernel side iconv library
  The kiconv library provides multi-byte character conversion tables for kernel
  side iconv service.
 
