Migrate packaging SVN to Git
Update Vcs-Browser and Vcs-Git fields.

--- a/debian/control
+++ b/debian/control
@@ -21,9 +21,9 @@ Build-Depends: debhelper (>= 9), pkg-config,
 # libncurses5-dev: needed by libalias
  libncurses5-dev [kfreebsd-any],
  freebsd-glue (>= 0.2.20~),
-Vcs-Browser: https://anonscm.debian.org/viewvc/glibc-bsd/trunk/freebsd-libs/
-Vcs-Svn: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.9.8
+Vcs-Browser: https://salsa.debian.org/kfreebsd-team/freebsd-libs
+Vcs-Git: https://salsa.debian.org/kfreebsd-team/freebsd-libs.git
 
 Package: libsbuf6
 Architecture: any
